Changelog for Writer2LaTeX version 1.0 -> 1.2

---------- version 1.1.1 ----------

[all] Bugfix: Paragraphs containing only fields are no longer lost

[w4l] Added Writer4LaTeX extension

[all] Buildfile is adapted to work with separated ure and office (OOo 3.0+)

[all] Bugfix: Corrected path to descriptions in oxt

[w2x] Bugfix: Corrected typo in german translation of navigation bar

[all] Raised requirement from Java 1.4 to Java 5